test-suite/tests/roundtrip/invalid/semantic/typecheck/multiple/01/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/multiple/01/input.essence:15:53:
   |
15 |                                                   . (v__6[1, 1] = v__5[1, 1] /\ v__6[1, 2] = v__5[1, 2]) * v__6[2, 1])
   |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number or Enum"
	Got: bool

tests/roundtrip/invalid/semantic/typecheck/multiple/01/input.essence:15:108:
   |
15 |                                                   . (v__6[1, 1] = v__5[1, 1] /\ v__6[1, 2] = v__5[1, 2]) * v__6[2, 1])
   |                                                                                                            ^^^^^^^^^^
Type error:
	Expected: bool
	Got: int

tests/roundtrip/invalid/semantic/typecheck/multiple/01/input.essence:20:53:
   |
20 |                                                   . (v__6[1, 1] = v__5[1, 1] /\ v__6[1, 2] = v__5[1, 2]) * v__6[2, 2])
   |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number or Enum"
	Got: bool

tests/roundtrip/invalid/semantic/typecheck/multiple/01/input.essence:20:108:
   |
20 |                                                   . (v__6[1, 1] = v__5[1, 1] /\ v__6[1, 2] = v__5[1, 2]) * v__6[2, 2])
   |                                                                                                            ^^^^^^^^^^
Type error:
	Expected: bool
	Got: int

